--- a/技术部任务二附件/css/common.css
+++ b/技术部任务二附件/css/common.css
@@ -7,11 +7,18 @@
     width: 500px;
     height: 500px;
     border: 1px solid #000;
+    position: relative;
 }
 /*边框样式*/
 .img1{
-    margin-top: 90px;
-    margin-left: 97px;
+    position: absolute;
+    width: 306px;
+    height: 319px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left:0;
+    margin: auto auto;
 }
 .border2{
     width: 500px;
@@ -23,7 +30,7 @@
 }
 /*边框样式*/
 .border3{
-    position: absolute;
+    position: relative;
     width: 500px;
     height: 500px;
     border: 1px solid #000;
@@ -32,7 +39,7 @@
 .img3{
     width: 306px;
     height: 319px;
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform:translate(-50%,-50%);
