--- a/技术部任务四/css/common.css
+++ b/技术部任务四/css/common.css
@@ -32,6 +32,7 @@
 .banner-text{
     border-top:2px solid #cc8091;
     float: right;
+    width: 215px;
 }
 .banner-text-part1{
     width: 58px;
@@ -53,30 +54,30 @@ i{
     color:#676767;
 }
 .banner-text-part3{
-    font-size: 94px;
+    font-size: 116px;
     color:#75b86b;
-    margin-top: 32px;
+    text-indent: -5px;
 }
 .banner-text-part4-right{
    display: flex;
     flex-direction: column;
 }
 .banner-text-part4-left{
-    font-size: 44px;
+    font-size: 55px;
     color:#cc8091;
     float:left;
     line-height: 44px;
 }
 .banner-text-part4-right1{
     float:left;
-    font-size: 25px;
+    font-size: 21px;
     color:#cc8091;
-    margin-top: 6px;
+    margin-top: 10px;
     line-height: 25px;
 }
 .banner-text-part4-right2{
     float:left;
-    font-size: 6px;
+    font-size: 12px;
     color:#bcbbba;
     line-height: 6px;
 }
@@ -91,6 +92,7 @@ i{
     line-height:16px;
     padding-right: 28px;
     color: #767777;
+    font-family: 宋体 ;
 }
 h1{
     width: 40px;
@@ -110,6 +112,7 @@ h1{
     line-height:16px;
     padding-right: 31px;
     color: #767777;
+    font-family: 宋体 ;
 }
 h2{
     width: 40px;
@@ -127,11 +130,13 @@ h2{
     font-size: 11px;
     line-height:16px;
     color: #767777;
+    font-family: 宋体 ;
 }
 h3{
     width: 40px;
     font-size: 14px;
     line-height: 14px;
+    border-bottom: 2px solid #d5a160;
     color:#cc7680;
     margin-bottom: 11px;
     padding-top: 42px;
@@ -148,36 +153,58 @@ h3{
     float:left;
 }
 .example-left-text1{
-    height: 155px;
+    height: 185px;
     border-bottom: 2px solid #11456b;
 }
 .the{
-    font-size: 50px;
+    font-size: 72px;
     color:#f5e327;
+    font-family: 黑体;
 }
 .tec{
-    font-size: 30px;
+    font-size: 42px;
     color:#11456b;
+    font-family: 黑体;
 }
 .example{
     display: inline-block;
-    height: 610px;
+    height: 640px;
     margin-top: 60px;
 }
 .example-left-body{
-    text-indent: 2em;
-    font-size: 11px;
+    font-size: 12px;
     line-height:16px;
     color: #767777;
+    margin-top: 20px;
+}
+.example-left-body-front{
+    font-size: 70px;
+    color:#f5e327;
+    width: 70px;
+    height: 70px;
+    text-indent: 0;
+    line-height: 70px;
+    overflow: hidden;
+    display: inline-block;
+    float: left;
+    margin-top: -70px;
 }
 p{
     text-indent: 2em;
 }
+.example-right11{
+    width: 2px;
+    height: 70px;
+    float: left;
+    margin-left: 70px;
+}
 .example1{
     width: 167px;
     height: 288px;
-    display: inline-block;
     float: right;
+    display: inline-block;
+    overflow: hidden;
+    clear: left;
 }
 .example-right1{
     width: 458px;
@@ -216,18 +243,20 @@ p{
     background-color: #eeedd6;
     float: right;
     position: relative;
+    margin-top: 68px;
 }
 .examle-right2-list{
     padding-top: 29px;
     padding-left: 31px;
     color:#767777;
+    font-size: 16px;
 }
 .triangle{
     width: 0;
     height: 0;
-    border-left:5px solid transparent;
-    border-right: 5px solid transparent;
-    border-bottom: 10px solid #10456b;
+    border-left:3px solid transparent;
+    border-right: 3px solid transparent;
+    border-bottom: 6px solid #10456b;
     display: inline-block;
 }
 .example-right2-red{
@@ -269,13 +298,14 @@ p{
 }
 .example-right2-text2{
     width: 161px;
+    height: 116px;
     font-size: 12px;
     color:#767777;
     position: absolute;
     right: 0;
-    bottom: 0;
     padding-bottom: 40px;
     padding-right: 20px;
+    overflow: hidden;
 }
 .footer {
     border-top: 2px solid #938e8c;
@@ -288,6 +318,14 @@ p{
     font-size: 10px;
     color:#d45d5c;
     overflow: hidden;
+}
+.symbol{
+    font-size: 40px;
+    color:#d45d5c;
+    width: 25px;
+    height: 21px;
+    overflow: hidden;
+    display: inline-block;
 }
 
 
