--- a/技术部任务五/css/common.css
+++ b/技术部任务五/css/common.css
@@ -9,6 +9,7 @@
     line-height: 80px;
     float:left;
     background-color:#2b333b;
+    position: relative;
 }
 .right{
     width: 1173px;
@@ -23,10 +24,10 @@
 }
 .li-left1 a{
     width: 120px;
+    height: 60px;
     font-size:30px;
     color: #fff;
     margin-left: 40px;
-    position: relative;
     overflow: hidden;
 }
 .item1{
