--- a/use/css/index.css
+++ b/use/css/index.css
@@ -239,12 +239,15 @@
             background-color: #f34949;
         }
         #tab1{
-            position: relative;
-            left: 50%;
-            margin-left: -550px;
+            width: 1100px;
+            margin-left: auto;
+            margin-right: auto;
         }
         #tab2,#tab3,#tab4{
             display: none;
+            width: 1100px;
+            margin-left: auto;
+            margin-right: auto;
         }
         .index-pancel{
             margin-top: 200px;
@@ -389,23 +392,13 @@
         .price{
             float:right;
             font-size: 0.9vw;
-            margin-top: -1.2vw;
         }
-        .star-bar{
-            font-size: 0;
-        }
-        .star {
-            display: inline-block;
-            width: 12px;
-            height: 13px;
-            margin-right: 5px;
-
-            background-repeat: no-repeat;
-        }
+        
         .food-item1{
             float:right;
-            margin-top: -267px;
             height: 267px;
+            width: 230px;
+            margin-top: 50px;
         }
         .index-pancel{
             margin-top: 563px;
